# disk-tech-assignment

./: README.md
fuse_fs/: helloworld.c  makefile  readme.md  readme.txt  云同步文件系统-设计文档.md
fuse_fs/doc/: 云同步文件系统-设计文档.md  存储技术基础大作业展示材料.pptx
fuse_fs/example_fs/: example  example_fs.c  makefile
fuse_fs/sync_fs/: file_system_agent.hpp  makefile  sync_fs.c  sync_fs_cxx_api.h  sync_fs_op.c  sync_fs_op.h
fuse_fs/tmp/: h.cpp  hello  helloworld  helloworld_cxx.cpp
fuse_fs/zerodrive/: CMakeLists.txt  DriveAgent.cpp  DriveAgent.h  DriveClientAgent.cpp  DriveClientAgent.h  DriveServerAgent.cpp  DriveServerAgent.h  FileOperation.cpp  FileOperation.h  Makefile  NetworkAgent.cpp  NetworkAgent.h  Protocol.cpp  Protocol.h  SharedQueue.h  doc.md  op.cpp  op.h  readme  runclient.sh  runclient2.sh  runserver.sh  zerodrive  zerodrive.cpp  zerodrive.h  zerodrive_common.cpp  zerodrive_common.h
fuse_fs/zerodrive/ref/zerodrive_internal_s.journal/: 1591126147293  1591126166413  1591126183295  1591126201556  1591126226691  1591126251793  1591126281940  1591126324161  1591126344203
fuse_fs/zerodrive/testFiles/: fuse-3.9.1.tar.xz  poem.txt
kv_engine/: KV Engine 报告.md  kv_engine.code-workspace
kv_engine/engine/engine_race/: engine_race.cc  engine_race.h  util.h
kv_engine/md/: KV Engine 报告.md
kv_engine/submit/engine/engine_race/: engine_race.h
readings/: Mnemosyne Lightweight Persistent Memory.md  NVM.md  RECIPE  Converting Concurrent DRAM Indexes to Persistent-Memory Indexes.md  System Software for Persistent Memory.md  strata.md
